@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.88 (gritter) 2/13/06";
+	"@(#)/usr/ucb/otfdump.sl	5.89 (gritter) 2/16/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.88 (gritter) 2/13/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.88 (gritter) 2/13/06";
+static const char sccsid[] USED = "@(#)dpost.sl  5.89 (gritter) 2/16/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.89 (gritter) 2/16/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.88 (gritter) 2/13/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.89 (gritter) 2/16/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.88 (gritter) 2/13/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.89 (gritter) 2/16/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.88";
+const char revision[] = "5.89";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -49,9 +49,9 @@ troff.d/otf.c: * Sccsid @(#)otf.c	1.38 (gritter) 1/5/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.11 (gritter) 12/20/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.36 (gritter) 2/13/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.63 (gritter) 2/13/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.119 (gritter) 1/24/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.120 (gritter) 2/16/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.21 (gritter) 2/5/06
-troff.d/unimap.c: * Sccsid @(#)unimap.c	1.12 (gritter) 1/19/06
+troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
 libhnj/hnjalloc.c: * Sccsid @(#)hnjalloc.c	1.3 (gritter) 8/26/05
 libhnj/hnjalloc.h: * Sccsid @(#)hnjalloc.h	1.2 (gritter) 8/25/05
